namespace GoldMetrics.GoldCheck.Platform.FleetOperations.Domain.Model.Commands;

public record AssignVehicleCommand(string VehicleId, string OperatorId);
