namespace GoldMetrics.GoldCheck.Platform.FleetOperations.Domain.Model.Commands;

public record CompleteHaulingCycleCommand(int Id, string DumpingPoint);
