namespace GoldMetrics.GoldCheck.Platform.FleetOperations.Domain.Model.Commands;

public record LoadMaterialCommand(int Id, decimal PayloadTons);
