namespace GoldMetrics.GoldCheck.Platform.FleetOperations.Domain.Model.Commands;

public record StartEngineCommand(string VehicleId);
