namespace GoldMetrics.GoldCheck.Platform.FleetOperations.Domain.Model.Commands;

public record UpdateRouteProgressCommand(int Id, string RouteProgress);
