using GoldMetrics.GoldCheck.Platform.Shared.Domain.Model.Events;

namespace GoldMetrics.GoldCheck.Platform.FleetOperations.Domain.Model.Events;

public record HaulingCycleStartedEvent(int CycleId, string VehicleId, string LoadingPoint) : IEvent;
