namespace GoldMetrics.GoldCheck.Platform.FleetOperations.Domain.Model.Queries;

public record GetHaulingCycleByIdQuery(int Id);
