namespace GoldMetrics.GoldCheck.Platform.FleetOperations.Domain.Model.Queries;

public record GetVehicleByIdQuery(string VehicleId);
