using GoldMetrics.GoldCheck.Platform.FleetOperations.Domain.Model.Aggregates;
using GoldMetrics.GoldCheck.Platform.Shared.Domain.Repositories;

namespace GoldMetrics.GoldCheck.Platform.FleetOperations.Domain.Repositories;

public interface IHaulingCycleRepository : IBaseRepository<HaulingCycle>
{
}
